kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: votely-backend
spec:
  selector:
    app: votely-backend
  ports:
  - protocol: TCP
    port: 5000  # YOUR_BACKEND_PORT
    targetPort: 5000  # YOUR_BACKEND_PORT
  type: ClusterIP
